public/css/index.css
/* ... */
@media screen and (min-width: 1600px) {
	.postlist-container {
		display:grid;
		grid-template-columns: repeat(8, 1fr);
		gap: 2rem;
	}
	.postlist-container .postlist {
		grid-column: 1 / 6;
	}
	.postlist-container .post-counter{
		grid-column: 6 / 9;
	}
	section.hero,
	.about-page {
		display: grid;
		grid-template-columns: repeat(8, 1fr);
	}
	
	.about-page section.bio,
	.postlist-container .postlist {
		grid-column: 1 / 6;
	}
	section.hero h2,
	article h2.post-deck {
		font-size: var(--font-size-xl);
	}
	section.hero .hero-details,
	.about-page section.bio-details,
	.postlist-container .post-counter {
		grid-column: 6 / 9;
	}
	.image-thumbnail-grid {
		grid-template-columns: repeat(5, 1fr);
	}
	.image-gallery-grid {
		grid-template-columns: repeat(2, 1fr);
	}
}

section.bio .container-center {
	display: flex;
	justify-content: center;
	margin-bottom: 2rem;
}

section.bio img {
	width: 16rem;
	height: auto;
	border-radius: 500px;
}

.featured-post-grid,
section.archive {
	margin-bottom: 2rem;
}

.featured-post-grid ol {
	display: grid;
	gap: 2rem;
	grid-template-columns: 1fr;
}
@media screen and (min-width: 650px) {
	.featured-post-grid ol {
	  grid-template-columns: repeat(2, 1fr);
	}
  }
@media screen and (min-width: 900px) {
	.featured-post-grid ol {
	  grid-template-columns: repeat(3, 1fr);
	}
}
@media screen and (min-width: 1600px) {
	.featured-post-grid ol {
	  grid-template-columns: repeat(4, 1fr);
	}
}

section.cv {
	max-width: 65ch;
}

.links-nextprev {
	list-style: none;
	/* border-top: 1px dashed var(--color-gray-20); */
	padding: 1em 0;
	margin-top: 2rem;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	border-top: 1px solid var(--subtle-border);
}

table {
	margin: 1em 0;
}
table td,
table th {
	padding-right: 1em;
}

pre,
code {
	font-family: var(--font-family-monospace);
}
pre:not([class*="language-"]) {
	margin: .5em 0;
	line-height: 1.375; /* 22px /16 */
	-moz-tab-size: var(--syntax-tab-size);
	-o-tab-size: var(--syntax-tab-size);
	tab-size: var(--syntax-tab-size);
	-webkit-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
}
code {
	word-break: break-all;
}

/* Header and footer styles */
header {
	flex-wrap: wrap;
	padding: 2rem 0;
}

header,
footer .footer-container {
	max-width: 80em;
    margin: auto;
	display: flex;
	justify-content: space-between;
	gap: 1em .5em;
	align-items: center;
}
footer .footer-container {
	align-items: flex-start;
	flex-direction: column;
	border-top: 1px solid var(--subtle-border);
	padding: 4rem 0;
}
footer .footer-container ul {
	list-style: none;
	margin: 0;
	padding: 0;
}
footer .footer-container ul li {
	margin-bottom: .8rem;
}
footer .footer-links {
	display: flex;
	gap: 4rem;
}
.license {
	font-size: smaller;
	max-width: 48ch;
}
.home-link {
	font-size: 1em; /* 16px /16 */
	font-weight: 700;
	margin-right: 2em;
}
.home-link:link:not(:hover) {
	text-decoration: none;
}

@media screen and (min-width: 650px) {
	span.view-mode:before {
		content: "👋 Internet Traveler";
	}
	footer .footer-container {
		flex-direction: row;
		justify-content: space-between;
	}
	footer .footer-links {
		gap: 8rem;
	}
}

@media (prefers-color-scheme: dark) {
	span.view-mode:before {
		content: "😎 We both love darkness";
	}
}

/* Nav */
.nav {
	display: flex;
	gap: 1.6rem;
	padding: 0;
	margin: 0;
	list-style: none;
}
.nav-item {
	display: inline-block;
	margin-right: 1em;
	margin-bottom: 0px;
}
.nav-item a[href]:not(:hover) {
	text-decoration: none;
}
.nav a[href][aria-current="page"] {
	text-decoration: underline;
}

/* Posts list */
.postlist {
	list-style: none;
	padding: 0;
	/* padding-left: 1.5rem; */
}
.postlist-item {
	/* display: flex;
	flex-wrap: wrap;
	align-items: flex-start; */
	/* counter-increment: start-from -1; */
	margin-bottom: 1em;
}
.postlist-item:before {
	display: inline-block;
	pointer-events: none;
	/* content: "" counter(start-from, decimal-leading-zero) ". "; */
	line-height: 100%;
	text-align: right;
	/* margin-left: -1.5rem; */
}
.postlist-date,
.postlist-item:before {
	font-size: 1.4125rem;
	color: var(--text-color);
	font-weight: 650;
	opacity: .8;
	font-variant-caps: all-small-caps;
}
.postlist-date {
	word-spacing: -0.5px;
	letter-spacing: .08rem;
	line-height: 1.5;
}
article time.postlist-date {
	line-height: 3;
}
.postlist-link {
	font-size: 1.1875em; /* 19px /16 */
	font-weight: 700;
	flex-basis: calc(100% - 1.5rem);
	/* padding-left: .25em;
	padding-right: .5em; */
	text-underline-position: from-font;
	text-underline-offset: 0;
	text-decoration-thickness: 1px;
}
.postlist-item-active .postlist-link {
	font-weight: bold;
}

/* Tags */
.post-tag {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	text-transform: capitalize;
	font-style: italic;
}
.postlist-item > .post-tag {
	align-self: center;
}

/* Tags list */
.post-metadata {
	display: inline-flex;
	flex-wrap: wrap;
	gap: .5em;
	list-style: none;
	padding: 0;
	margin: 0;
}
.post-metadata time {
	margin-right: 1em;
}

/* Direct Links / Markdown Headers */
.header-anchor {
	text-decoration: none;
	font-style: normal;
	font-size: 1em;
	margin-left: .1em;
}
a[href].header-anchor,
a[href].header-anchor:visited {
	color: transparent;
}
a[href].header-anchor:focus,
a[href].header-anchor:hover {
	text-decoration: underline;
}
a[href].header-anchor:focus,
:hover > a[href].header-anchor {
	color: #aaa;
}

h2 + .header-anchor {
	font-size: 1.5em;
}

/* social links */
.social ul {
	display: flex;
	flex-wrap: wrap;
	gap: 2rem;
	margin: 0;
	padding: 0;
}
.social li {
	display: inline-block;
	vertical-align: middle;
}
.social svg {
	fill: var(--color-gray-80);
	opacity: 1;
	width: 36px;
	height: 100%;
	vertical-align: middle;
}
.social a {
	display: block;
	text-align: center; 
}

/* Special filtering for a grid of items */

input[type="radio"] {
    position: absolute;
    left: -9999px;
  }
/* ... */

